templates/http-headers_template.yaml
---
# Source: http-headers/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-http-headers
  labels:
    helm.sh/chart: http-headers-1.2.1
    app.kubernetes.io/name: http-headers
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: http-headers
    app.kubernetes.io/instance: release-name
---
# Source: http-headers/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-http-headers
  labels:
    helm.sh/chart: http-headers-1.2.1
    app.kubernetes.io/name: http-headers
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: http-headers
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: http-headers
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-http-headers
      securityContext:
        {}
      containers:
        - name: http-headers
          securityContext:
            {}
          image: "quay.io/k8start/http-headers:1.2.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /livenessProbe
              port: 8080
          readinessProbe:
            httpGet:
              path: /readinessProbe
              port: 8080
          resources:
            {}
---
# Source: http-headers/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-http-headers
  labels:
    helm.sh/chart: http-headers-1.2.1
    app.kubernetes.io/name: http-headers
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  rules:
    - host: "http.mydev"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-http-headers
                port:
                  number: 8080
---
# Source: http-headers/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-http-headers-test-connection"
  labels:
    helm.sh/chart: http-headers-1.2.1
    app.kubernetes.io/name: http-headers
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.2.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-http-headers:8080']
  restartPolicy: Never
